# pimpf

./: Cargo.toml  flake.nix  run.sh
src/: comment_remover.rs  grammar.rs  main.rs  parser.rs
src/analyzer/: integer_range.rs  mod.rs  no_return_in_main.rs  num_range.rs  return_exists.rs  syntax.rs  variable_dec_init_and_usage.rs
src/analyzer/integer_range/: mod.rs  query.scm
